# EvalAgent

./: .gitignore  README.md  pyproject.toml
RAG/: rag.py
RAG/llm/: llm.py
RAG/retriever/: __init__.py  base.py  bm25.py  faiss.py  retriever_manager.py
agent/: MetaReviewAgent.py  agent_test.py  agent_test2.py  meta_reviewer_agent.py
data_annotator/: annotator_pipeline.py  annotators.py  base_annotator.py  prompt_manager.py
evaluator/: base_evaluator.py  evaluators.py  llm.py  meta_review.py  meta_review_agent.py  prompt_manager.py  requirements.txt
evaluator/user_manual/: XR_LAB_usage.md
execution_pipeline/: execution_pipeline.py
notebooks/: HF_data_upload_example.ipynb  HF_datasets.ipynb  evaluator_example.ipynb  test_adherence_faithfulness.ipynb  test_answer_equvilence.ipynb  test_answer_similarity_faithfulness.ipynb  test_bert_score.ipynb  test_coherence.ipynb  test_context_relevance.ipynb  test_context_util.ipynb  test_deepseek_r1.ipynb  test_fac_cor.ipynb  test_factual_accuracy.ipynb  test_hc_evaluator.ipynb  test_hf_llms.ipynb  test_key_point_hallucination.ipynb  test_meta_review.ipynb  test_vllm.ipynb
persona/: __main__.py  persona.py
personal/kai/: proxy_server.py  train.csv  web_server.ipynb
personal/leo/: app.py
resource/: cited_papers.tex
scripts/: annotation_pipeline_example.py  evaluation_pipeline_context_utilization.py  evaluation_pipeline_example.py  evaluation_pipeline_example_pandas.py  evaluation_pipeline_non_llm_example.py  synthetic_mistake_pipeline_example.py
utils/: base.py  constants.py  llm.py
