[tool.poetry]
name = "RAG-LLM-Metric"
version = "0.1.0"
description = "My project description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "RAG-LLM-Metric"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.12.0"
requests = "^2.31.0"
datasets = "^2.16.1"
python-dotenv = "^1.0.0"
ipykernel = "^6.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"